--- a/nofib-analyze.cabal
+++ b/nofib-analyze.cabal
@@ -30,3 +30,7 @@ executable nofib-analyze
     array == 0.5.*,
     containers == 0.5.*
   default-language:    Haskell2010
+
+source-repository head
+  type:     git
+  location: https://github.com/nomeata/nofib-analyze
