--- a/nofib-analyze.cabal
+++ b/nofib-analyze.cabal
@@ -25,10 +25,10 @@ executable nofib-analyze
   main-is:             Main.hs
   other-modules:       CmdLine, GenUtils, Slurp
   build-depends:
-    base >=4.7 && <4.8,
+    base >=4.3 && <4.9,
     regex-compat == 0.95.*,
-    array == 0.5.*,
-    containers == 0.5.*
+    array >= 0.3 && < 0.6,
+    containers >= 0.4 && < 0.6
   default-language:    Haskell2010
 
 source-repository head
