Import nofib head
up to including nofib commit a82ea5f. This is somewhat ahead of the
nofib that ships with 7.10.3.

--- a/nofib-analyze.cabal
+++ b/nofib-analyze.cabal
@@ -1,5 +1,5 @@
 name:                nofib-analyze
-version:             7.10.1
+version:             7.12.0.20151208
 synopsis:            Parse and compare nofib runs
 description:
   The nofib benchmark suite is the standard benchmark suite
