--- a/nofib-analyse.cabal
+++ b/nofib-analyse.cabal
@@ -20,7 +20,7 @@ copyright:           1997 - 2005 Simon Marlow
 category:            Development
 build-type:          Simple
 cabal-version:       >=1.10
-tested-with:         GHC==9.6.*, GHC==9.6.*, GHC==9.2.*, GHC==9.0.*, GHC==8.10.*, GHC==8.6.*, GHC==8.4.*, GHC==8.2.*, GHC==8.0.*, GHC==7.10.*, GHC==7.8.*, GHC==7.6.*, GHC==7.4.*, GHC==7.2.*, GHC==7.0.*
+tested-with:         GHC==9.6.*, GHC==9.6.*, GHC==9.2.*, GHC==9.0.*, GHC==8.10.*, GHC==8.6.*, GHC==8.4.*, GHC==8.2.*, GHC==8.0.*
 
 
 executable nofib-analyse
